# ida-dbimporter

./: .flake8  .gitignore  README.md  ida-plugin.json  main.py  plugin_main.py  pyproject.toml  readme.md  usage.md
.github/workflows/: lint.yaml  release.yaml
ida_dbimporter/: __init__.py  cli.py  core.py  exporter.py  ghidra.py
